--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,14 @@
 /* header */
+
+header {
+    height: 100vh;
+}
 .navbar ul {
     display: flex; /*permet d'afficher en horizontal*/
     align-items: center; /*aligne tout les elements*/
-    justify-content: center;
+    justify-content: space-around;
     gap: 3%; /* espace entre les element*/
+    width: 50%;
 }
 
 .navbar ul li {
@@ -13,8 +18,21 @@
 .navbar {
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 150px;
 }
 
 .img_logo {
     border-radius: 15px;
+}
+
+.color { 
+    background-color: rgb(242, 104, 247);
+    width: 25%;
+    height: 150px;
+}
+
+.navbar_div_img {
+    width: 15%;
 }
