--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,3 +36,9 @@ header {
 .navbar_div_img {
     width: 15%;
 }
+
+.section1 {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+}
